# ufc

./: sdk.rar
sdk/: Makefile.am  configure.ac  readme.txt
sdk/include/: Makefile.am
sdk/include/ufc/: ufc.hpp
sdk/include/ufc/base/: config.hpp  memory.hpp  numeric.hpp  object.hpp  platform.hpp  source_info.hpp  types.hpp
sdk/include/ufc/container/: array.hpp  buffer.hpp  circulation_queue.hpp  deque.hpp  list.hpp  map.hpp  multimap.hpp  multiset.hpp  priority_queue.hpp  ptr_array.hpp  queue.hpp  set.hpp  stack.hpp  vector.hpp
sdk/include/ufc/datetime/: date.hpp  date_time.hpp  time.hpp  time_format.hpp  time_zone.hpp  timespan.hpp  timestamp.hpp
sdk/include/ufc/exception/: assert.hpp  exception.hpp
sdk/include/ufc/filesystem/: file.hpp  fstream.hpp  path.hpp
sdk/include/ufc/filesystem/detail/: file_unix.hpp  file_win32.hpp  path_unix.hpp  path_win32.hpp
sdk/include/ufc/network/: dns.hpp  host_entry.hpp  ip_address.hpp  socket.hpp  socket_address.hpp  socketdefs.hpp
sdk/include/ufc/smart_ptr/: scoped_array.hpp  scoped_ptr.hpp  shared_array.hpp  shared_ptr.hpp
sdk/include/ufc/string/: codecvt.hpp  string.hpp  string_builder.hpp  string_tokenizer.hpp  string_util.hpp
sdk/include/ufc/system/: atomic_counter.hpp  environment.hpp  ref_counted_object.hpp
sdk/include/ufc/thread/: condition.hpp  event.hpp  mutex.hpp  runnable.hpp  runnable_adapter.hpp  runnable_target.hpp  rwlock.hpp  semaphore.hpp  thread.hpp  thread_group.hpp  thread_local.hpp  thread_pool.hpp
sdk/source/: Makefile.am
sdk/source/base/: config.cpp  numeric.cpp  object.cpp  source_info.cpp
sdk/source/datetime/: date.cpp  date_time.cpp  date_time_util.hpp  time.cpp  time_format.cpp  time_zone.cpp  time_zone_unix.hpp  time_zone_win32.hpp  timespan.cpp  timestamp.cpp
sdk/source/exception/: assert.cpp  exception.cpp
sdk/source/filesystem/: file.cpp  file_unix.hpp  file_win32.hpp  fstream.cpp  path.cpp  path_unix.hpp  path_win32.hpp
sdk/source/filesystem/detail/: file_unix.hpp  file_win32.hpp
sdk/source/network/: dns.cpp  host_entry.cpp  ip_address.cpp  socket_address.cpp  socket_impl.cpp  socket_impl.hpp  socketdefs.cpp  socketdefs.hpp
sdk/source/string/: codecvt.cpp  string.cpp  string_builder.cpp  string_tokenizer.cpp  string_util.cpp
sdk/source/system/: atomic_counter.cpp  atomic_counter_unix.hpp  atomic_counter_win32.hpp  environment.cpp  environment_unix.hpp  environment_win32.hpp  ref_counted_object.cpp
sdk/source/thread/: condition.cpp  event.cpp  event_posix.hpp  event_win32.hpp  mutex.cpp  mutex_posix.hpp  mutex_win32.hpp  runnable.cpp  runnable_target.cpp  rwlock.cpp  rwlock_posix.hpp  rwlock_win32.hpp  semaphore.cpp  semaphore_posix.hpp  semaphore_win32.hpp  thread.cpp  thread_group.cpp  thread_local.cpp  thread_local_posix.hpp  thread_local_win32.hpp  thread_pool.cpp  thread_posix.hpp  thread_win32.hpp
