## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign
SUBDIRS =

includedir = $(prefix)/include

#include_HEADERS        = ufc/ufc.hpp

nobase_include_HEADERS = ufc/ufc.hpp \
                       ufc/base/config.hpp \
                       ufc/base/platform.hpp \
                       ufc/base/types.hpp \
                       ufc/base/object.hpp \
                       ufc/base/memory.hpp \
                       ufc/base/source_info.hpp \
                       ufc/base/numeric.hpp \
                       ufc/container/buffer.hpp \
                       ufc/container/array.hpp \
                       ufc/container/ptr_array.hpp \
                       ufc/container/circulation_queue.hpp \
                       ufc/container/deque.hpp \
                       ufc/container/list.hpp \
                       ufc/container/map.hpp \
                       ufc/container/multimap.hpp \
                       ufc/container/multiset.hpp \
                       ufc/container/priority_queue.hpp \
                       ufc/container/queue.hpp \
                       ufc/container/set.hpp \
                       ufc/container/stack.hpp \
                       ufc/container/vector.hpp \
                       ufc/datetime/timestamp.hpp \
                       ufc/datetime/timespan.hpp \
                       ufc/datetime/time_format.hpp \
                       ufc/datetime/time_zone.hpp \
                       ufc/datetime/time.hpp \
                       ufc/datetime/date.hpp \
                       ufc/datetime/date_time.hpp \
                       ufc/exception/assert.hpp \
                       ufc/exception/exception.hpp \
                       ufc/filesystem/file.hpp \
                       ufc/filesystem/detail/file_win32.hpp \
                       ufc/filesystem/detail/file_unix.hpp \
                       ufc/filesystem/path.hpp \
                       ufc/filesystem/detail/path_win32.hpp \
                       ufc/filesystem/detail/path_unix.hpp \
                       ufc/filesystem/fstream.hpp \
                       ufc/smart_ptr/scoped_array.hpp \
                       ufc/smart_ptr/scoped_ptr.hpp \
                       ufc/smart_ptr/shared_array.hpp \
                       ufc/smart_ptr/shared_ptr.hpp \
                       ufc/string/string.hpp \
                       ufc/string/string_util.hpp \
                       ufc/string/string_builder.hpp \
                       ufc/string/string_tokenizer.hpp \
                       ufc/string/codecvt.hpp \
                       ufc/system/atomic_counter.hpp \
                       ufc/system/environment.hpp \
                       ufc/system/ref_counted_object.hpp \
                       ufc/thread/mutex.hpp \
                       ufc/thread/event.hpp \
                       ufc/thread/condition.hpp \
                       ufc/thread/rwlock.hpp \
                       ufc/thread/runnable.hpp \
                       ufc/thread/runnable_adapter.hpp \
                       ufc/thread/runnable_target.hpp \
                       ufc/thread/thread.hpp \
                       ufc/thread/thread_local.hpp \
                       ufc/thread/thread_pool.hpp \
                       ufc/thread/thread_group.hpp \
                       ufc/network/socketdefs.hpp \
                       ufc/network/ip_address.hpp \
                       ufc/network/socket_address.hpp \
                       ufc/network/host_entry.hpp \
                       ufc/network/dns.hpp